<resources>
    <string name="ab_title_filter_edit">Edit</string>
    <string name="ab_title_new_message">New Message</string>
    <string name="ab_title_newfilter">Add Filter</string>
    <string name="ab_title_newfolder">New Folder</string>
    <string name="ab_title_next">Next</string>
    <string name="ab_title_prev">Previous</string>
    <string name="ab_title_search">Search</string>
    <string name="ab_title_send">Send</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app_name">@string/about_dialog_app_name</string>
    <string name="about_dialog_app_name">Mail.Ru</string>
    <string name="about_social_filter_information">"We will not notify you about email from the following social networks: 
- Facebook 
- Google+ 
- Ya.ru 
- Twitter 
- MoiKrug 
- MoiMir 
- Odnoklassniki 
- VK 
- LiveJournal 
- VKruguDruzei 
- MirTesen 
- Foursquare"</string>
    <string name="access_denied">Access denied</string>
    <string name="accessibility_error">Unable to open message</string>
    <string name="account_counter_typeface">robotoRegular</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_settings_change_phone_hint1">To change the phone number, you will have to confirm both your old and new numbers. Make sure you are able to receive calls or SMS on both phones.</string>
    <string name="account_settings_change_phone_number">Change Phone Number</string>
    <string name="account_settings_change_phone_title">Change Phone</string>
    <string name="account_settings_confirm_new_phone_number">Confirm New Phone Number</string>
    <string name="account_settings_confirm_new_phone_number_hint">We will send you an SMS with a confirmation code.</string>
    <string name="account_settings_current_phone">Current Phone</string>
    <string name="account_settings_new_phone">New Phone</string>
    <string name="account_type">ru.mail</string>
    <string name="acknowlegements">Acknowledgements</string>
    <string name="acknowlegements_title">%1$s for Android is built using following open source software</string>
    <string name="acknowlegements_title_app_name">@string/app_name_short</string>
    <string name="action_account_logout">ru.mail.mailapp.ACCOUNT_LOGOUT</string>
    <string name="action_account_manager_login">ru.mail.mailapp.ACCOUNT_MANAGER_LOGIN</string>
    <string name="action_add_filter">ru.mail.mailapp.ACTION_ADD_FILTER</string>
    <string name="action_attach_add">Add attach</string>
    <string name="action_bar_cancel">CANCEL</string>
    <string name="action_bar_counter_max_value_exceeds_label">999+</string>
    <string name="action_bar_select_all">SELECT ALL</string>
    <string name="action_cancel_mail">ru.mail.mailapp.CANCEL_MAIL</string>
    <string name="action_change_phone">ru.mail.mailapp.ACTION_CHANGE_PHONE</string>
    <string name="action_clear_notification">ru.mail.mailapp.ACTION_CLEAR_NOTIFICATION</string>
    <string name="action_confirm_registration">ru.mail.CONFIRM_REGISTRATION</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_delete_account">ru.mail.mailapp.ACTION_DELETE_ACCOUNT</string>
    <string name="action_draft">ru.mail.mailapp.ACTION_DRAFT</string>
    <string name="action_edit_filter">ru.mail.mailapp.ACTION_EDIT_FILTER</string>
    <string name="action_edit_mail">ru.mail.mailapp.EDIT_NEW_MAIL</string>
    <string name="action_email_copy">Copy email</string>
    <string name="action_email_find">Find messages</string>
    <string name="action_email_send">Send message</string>
    <string name="action_filters">ru.mail.mailapp.ACTION_FILTERS</string>
    <string name="action_folders_settings">ru.mail.mailapp.ACTION_FOLDERS_SETTINGS</string>
    <string name="action_manage_subscriptions">ru.mail.mailapp.ACTION_MANAGE_SUBSCRIPTIONS</string>
    <string name="action_move_to_folder">Move to Folder</string>
    <string name="action_redirect_label">Redirect</string>
    <string name="action_unsubscribe_label">Unsubscribe</string>
    <string name="add_documents_url">https://e.mail.ru/fines/documents</string>
    <string name="allow_screenshots">Allow screenshots</string>
    <string name="archive">@string/notification_action_archive</string>
    <string name="block_for_text">Do not disturb me for</string>
    <string name="block_notifications_description">Temporally block notifications</string>
    <string name="block_notifications_text">Do not disturb me</string>
    <string name="change_pin">Change PIN</string>
    <string name="delete">Delete</string>
    <string name="dialog_addressook_sync_text">For you convenience, you can add your contacts to your device’s address book.</string>
    <string name="dialog_addressook_sync_title">Address Book</string>
    <string name="enable_archive_for_google">Enable Archive for Google</string>
    <string name="extra_action">action</string>
    <string name="extra_url">extra_url</string>
    <string name="filters">Filters</string>
    <string name="fingerprint_unlock">Fingerprint Unlock</string>
    <string name="folders">Folders</string>
    <string name="help_link">https://help.mail.ru/app_android</string>
    <string name="mapp_help">Help</string>
    <string name="mapp_mark_all_flagged">Flag</string>
    <string name="mapp_mark_all_read">Mark as Read</string>
    <string name="mapp_mark_all_unflagged">Unflag</string>
    <string name="mapp_mark_all_unread">Mark as Unread</string>
    <string name="mapp_mark_as_nospam">Mark as not Spam</string>
    <string name="mapp_mark_as_spam">Mark as Spam</string>
    <string name="mapp_set_account_preferences">Accounts</string>
    <string name="mapp_set_general">General</string>
    <string name="mapp_set_manage_subscriptions">Manage subscriptions</string>
    <string name="mapp_set_notif">Notifications</string>
    <string name="mapp_set_notif_date_from">From</string>
    <string name="mapp_set_notif_date_to">To</string>
    <string name="mapp_set_notif_disable_coupon_services">Flash Sales Sites</string>
    <string name="mapp_set_notif_disable_folders">Folders</string>
    <string name="mapp_set_notif_disable_soc_networks">Social Networks</string>
    <string name="mapp_set_notif_dont_disturb">Do not disturb</string>
    <string name="mapp_set_notif_mode">Mode</string>
    <string name="mapp_set_notif_mode_summary">%1$s</string>
    <string name="mapp_set_other_about">About</string>
    <string name="mapp_set_other_screen_rotation">Rotate Screen</string>
    <string name="mapp_set_other_subscript">Signature</string>
    <string name="mapp_set_sound">Sound settings</string>
    <string name="mapp_settings_filtration">Filters</string>
    <string name="mapp_settings_information">Information</string>
    <string name="my_documents">My documents</string>
    <string name="name_and_avatar">Name &amp; Avatar</string>
    <string name="notification_history_text">Notification history</string>
    <string name="notification_history_text_description">Show notification history on this device</string>
    <string name="package_name">ru.mail.mailapp</string>
    <string name="personal_data_activity_title">Privacy settings</string>
    <string name="pin_lock_timeout">Lock Automatically</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="pinkeyboard_numpad_0">0</string>
    <string name="pinkeyboard_numpad_1">1</string>
    <string name="pinkeyboard_numpad_2">2</string>
    <string name="pinkeyboard_numpad_3">3</string>
    <string name="pinkeyboard_numpad_4">4</string>
    <string name="pinkeyboard_numpad_5">5</string>
    <string name="pinkeyboard_numpad_6">6</string>
    <string name="pinkeyboard_numpad_7">7</string>
    <string name="pinkeyboard_numpad_8">8</string>
    <string name="pinkeyboard_numpad_9">9</string>
    <string name="prefs_advertising_enabled">Advertising enabled</string>
    <string name="prefs_appearance_avatar">Avatars in Message List</string>
    <string name="prefs_appearance_snippets">Message Snippets</string>
    <string name="prefs_appearance_title">Appearance</string>
    <string name="prefs_confirm_blind_copy_summary">Always send Bcc to myself</string>
    <string name="prefs_confirm_blind_copy_title">Bcc Myself</string>
    <string name="prefs_open_links_in_browser">Open Links in Browser</string>
    <string name="prefs_precache_attach">Download attachments automatically</string>
    <string name="prefs_precache_attach_summary">Setup automatic download. Disable this option to reduce data usage.</string>
    <string name="prefs_rate_app_title">Rate the App</string>
    <string name="prefs_show_images_summary">Setup image loading in messages. Disable this option to reduce data usage.</string>
    <string name="print">Print</string>
    <string name="report_reuse_text">"%1$s doesn't belong to me"</string>
    <string name="report_reuse_text_description">Block verification notifications across all my devices</string>
    <string name="save">Save</string>
    <string name="save_all_attachments">Save All Attachments</string>
    <string name="save_as_pdf">Save as pdf</string>
    <string name="save_as_title">Save as</string>
    <string name="save_sent_messages_imap_setting">Save Sent Messages</string>
    <string name="save_sent_messages_imap_setting_summary">Save to Sent folder after sending</string>
    <string name="save_to_cloud">Save to Cloud Mail.Ru</string>
    <string name="security_phone_settings">Phones</string>
    <string name="select_all">Select all</string>
    <string name="settings_label">Settings</string>
    <string name="share_all_attachments">Share All Attachments</string>
    <string name="share_title">Share</string>
    <string name="show_images_settings">Load images</string>
    <string name="subscriptions_activity_title">Manage Ads</string>
    <string name="thread_preference_activity_title">Threads</string>
    <string name="use_finger_protection">Use fingerprint to unlock the app</string>
</resources>