<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item n1:icon="@drawable/ic_action_download" n1:id="@id/toolbar_action_save_attach" n1:title="@string/save" n2:showAsAction="always"
      xmlns:n1="http://schemas.android.com/apk/res/android" xmlns:n2="http://schemas.android.com/apk/res-auto" />
    <item n3:icon="@drawable/ic_action_save_as" n3:id="@id/toolbar_action_save_as" n3:title="@string/save_as_title" n4:showAsAction="ifRoom"
      xmlns:n3="http://schemas.android.com/apk/res/android" xmlns:n4="http://schemas.android.com/apk/res-auto" />
    <item n5:icon="@drawable/ic_action_share" n5:id="@id/toolbar_action_share" n5:title="@string/share_title" n6:showAsAction="ifRoom"
      xmlns:n5="http://schemas.android.com/apk/res/android" xmlns:n6="http://schemas.android.com/apk/res-auto" />
</menu>